; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/wininet/extr_http.c_proxy_active.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/wininet/extr_http.c_proxy_active.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_CURRENT_USER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [60 x i8] c"Software\\Microsoft\\Windows\\CurrentVersion\\Internet Settings\00", align 1
@KEY_QUERY_VALUE = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"ProxyEnable\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @proxy_active to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proxy_active() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = load i32, i32* @HKEY_CURRENT_USER, align 4
  %6 = load i32, i32* @KEY_QUERY_VALUE, align 4
  %7 = call i64 @RegOpenKeyExA(i32 %5, i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0), i32 0, i32 %6, i32* %2)
  %8 = load i64, i64* @ERROR_SUCCESS, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %1, align 4
  br label %25

12:                                               ; preds = %0
  store i64 8, i64* %4, align 8
  %13 = load i32, i32* %2, align 4
  %14 = ptrtoint i64* %3 to i32
  %15 = call i64 @RegQueryValueExA(i32 %13, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32* null, i32* null, i32 %14, i64* %4)
  %16 = load i64, i64* @ERROR_SUCCESS, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i64 0, i64* %3, align 8
  br label %19

19:                                               ; preds = %18, %12
  %20 = load i32, i32* %2, align 4
  %21 = call i32 @RegCloseKey(i32 %20)
  %22 = load i64, i64* %3, align 8
  %23 = icmp ne i64 %22, 0
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %1, align 4
  br label %25

25:                                               ; preds = %19, %10
  %26 = load i32, i32* %1, align 4
  ret i32 %26
}

declare dso_local i64 @RegOpenKeyExA(i32, i8*, i32, i32, i32*) #1

declare dso_local i64 @RegQueryValueExA(i32, i8*, i32*, i32*, i32, i64*) #1

declare dso_local i32 @RegCloseKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
